# bugs

./: LICENSE  README.md
haskell/: ghc-primops-doc.hs  hspec+quickcheck.hs  negative-literal.hs
haskell/AMQP/amqp-bugs/: CHANGELOG.md  README.md  amqp-bugs.cabal  stack.yaml
haskell/AMQP/amqp-bugs/app/: Main.hs
haskell/double-rounding/: .gitignore  ChangeLog.md  README.md  package.yaml  round  round.hs
haskell/double-rounding/app/: Main.hs
haskell/double-rounding/test/: Spec.hs
haskell/fourmolu/: PragmaInHaddock.hs  Section.hs  ValidHaddockUnparseable.hs  fourmolu-bugs.cabal
haskell/ghc-cas-array/: cas  cas.hs  cas.tix
haskell/ghc-cas-array/.hpc/: Main.mix
haskell/ghc-constraint-slowdown/: bug.hs  lib-rules-fired-with-bug.ddump-simpl  main.hs  no-bu.hs  no-slow.ddump-simpl
haskell/ghc-foreign-ptr-corrupt-heap/: Main  Main.hs
haskell/ghc-impossible-mkTyConKindRepBinds/: ghc-impossible  ghc-impossible.hs
haskell/ghc-infinite-loop/: loop  loop-O0.dump-simpl  loop-O1.dump-simpl  loop.dump-simpl  loop.hs  noloop  noloop-O1.dump-simpl  noloop.dump-simpl  noloop.hs
haskell/ghc-infinite-loop/minimal/: loop  loop-O0.dump-simpl  loop-O1.dump-simpl  loop.hs  noloop-O0.dump-simpl  noloop-O1.dump-simpl
haskell/ghc-int8/: MyInt8.hs  T18141.hs  int8  int8.hs
haskell/hls/head/: CHANGELOG.md  head.cabal
haskell/hls/head/src/: Head.hs
haskell/ormolu-trailing-comma/: classic.hs  ormolu.hs
haskell/peristent-unique-show/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
haskell/peristent-unique-show/src/: Lib.hs  SecretKey.hs
haskell/prim-overflow/: CHANGELOG.md  README.md  prim-overflow.cabal
haskell/prim-overflow/app/: Main.hs
haskell/ratio/: ratio  ratio.hs
haskell/stack-ghc-pkg-cannot-find-package/bar/: .gitignore  package.yaml  stack.yaml
haskell/stack-ghc-pkg-cannot-find-package/bar/app/: Main.hs
haskell/stack-ghc-pkg-cannot-find-package/bar/src/: Bar.hs
haskell/stack-ghc-pkg-cannot-find-package/foo/: .gitignore  package.yaml
haskell/stack-ghc-pkg-cannot-find-package/foo/src/: Lib.hs
haskell/vector/: slice.hs  take-drop.hs  unfoldrn  unfoldrn.hs  vector-slice.md
haskell/vector/let-floating-unsafe-thaw/: let-float-1.hs
haskell/vector/vector-validations/: CHANGELOG.md  README.md  stack.yaml  vector-validations.cabal
haskell/vector/vector-validations/app/: Main.hs
haskell/word-size/: CHANGELOG.md  README.md  stack.yaml  word-size.cabal
haskell/word-size/app/: Main.hs
haskell/word-size/dumps/: cons.dump-simpl  without-cpp.dump-simpl
