name:                amqp-bugs
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/amqp-bugs#readme>
homepage:            https://github.com/lehins/amqp-bugs
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2021 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18

library
  hs-source-dirs:      src
  exposed-modules:     Lib

  other-modules:
  build-depends:       base >= 4.8 && < 5

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints


executable amqp-bugs
  main-is: Main.hs
  other-modules:
      Paths_amqp_bugs
  hs-source-dirs:     app
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -O2
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N
  build-depends:      base
                    , amqp
                    , wai
                    , warp
                    , scotty
                    , http-types
                    , rio
  default-language: Haskell2010
